use-cases/redirect-ssl-wildcard/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-wildcard
  namespace: httpbin
spec:
  gatewayClassName: merged-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
  - name: https-httpbin
    protocol: HTTPS
    port: 8443
    hostname: "*.httpbin.io"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-cert
        kind: Secret
        group: ""
  - name: https-httpbin-int
    protocol: HTTPS
    port: 8443
    hostname: "*.httpbin-internal.io"
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-cert
        kind: Secret
        group: ""
